tests/sksl/errors/Ossfuzz70643.glsl
### Compilation failed:

error: 1: unsized arrays are not permitted here
S {} S[];
       ^
error: 1: interface block 'S' must contain at least one field
S {} S[];
^
error: 1: symbol 'S' was already defined
S {} S[];
^
error: 2: unsized arrays are not permitted here
S {} S[];
       ^
error: 2: interface block 'S' must contain at least one field
S {} S[];
^
error: 2: symbol 'S' was already defined
S {} S[];
^
error: symbol 'S[1]' was already defined
error: 2: symbol 'S' was already defined
S {} S[];
^
8 errors
